welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: type mismatch;
 found   : Unit
 required: Boolean
    for (i<- 0 to 4){
          ^arrayFront9:13: error: type mismatch;
 found   : Unit
 required: Boolean
    for (i<- 0 to nums.length-1){
          ^